# firstPetPr

./: CMakeLists.txt  main.cpp  math_operations.cpp  math_operations.h
algoritms/polindrome/: PolindromeValidator.cpp  PolindromeValidator.h
algoritms/twoSum/: two_sum.cpp
algoritms/two_sum/: two_sum.h
coreSyntax/: PointerFunctionClassExample.cpp  PointerFunctionClassExample.h  PrintClass.cpp  PrintClass.h  pointer_exampl.cpp
coreSyntax/pointer/: PointerFunctionClassExample.cpp  pointer_exampl.h
